--- a/app/src/stagging/AndroidManifest.xml
+++ b/app/src/stagging/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.product.flav">
-
-    <application
+<!--    <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="${appLabel}"
@@ -18,9 +17,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<!--
-        <activity android:name=".MainActivityFlav" />
--->
-    </application>
+     </application>-->
 
 </manifest>
